--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "vendhub",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/backend/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:frontend": "vite --config frontend/vite.config.ts"
+    "dev:frontend": "vite --config frontend/vite.config.ts",
+    "dev:backend": "tsx watch backend/index.ts",
+    "build:backend": "tsc -p backend/tsconfig.json && tsc-alias -p backend/tsconfig.json",
+    "dev": "concurrently -n FRONTEND,BACKEND -c bgBlue.bold,bgGreen.bold \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "build": "npm run build:backend && vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -19,18 +25,27 @@
   "homepage": "https://github.com/jy-ham/VendHub#readme",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "concurrently": "^9.1.2",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.2"
   },
   "dependencies": {
+    "@hono/node-server": "^1.14.1",
+    "@react-google-maps/api": "^2.20.6",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "hono": "^4.7.7",
     "postgres": "^3.4.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-places-autocomplete": "^7.3.0"
   }
 }
