--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@hono/node-server": "^1.14.1",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.0",
     "drizzle-orm": "^0.42.0",
@@ -49,6 +50,7 @@
     "postgres": "^3.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-places-autocomplete": "^7.3.0"
+    "react-places-autocomplete": "^7.3.0",
+    "zod": "^3.24.4"
   }
 }
