fixed login button not showing up, added missing public path and error return on attempting to access non-public paths without token, and removed unused code

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.0",
     "drizzle-orm": "^0.42.0",
-    "hono": "^4.7.7",
+    "hono": "^4.7.11",
+    "path-to-regexp": "^8.2.0",
     "postgres": "^3.4.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
