--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,5 @@ jobs:
       image: node:20
     steps:
       - uses: actions/checkout@v4
-        with:
-          node-version: 20
       - run: npm ci
-      - run: npm dev
+      - run: npm run dev
