--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,9 +14,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container:
-      image: node:20
+    strategy:
+      matrix:
+        node-version: ["18.x", "20.x"]
     steps:
       - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
       - run: npm install
-#      - run: npm run dev
