--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/backend/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo testing",
     "dev:frontend": "vite --config frontend/vite.config.ts",
     "dev:backend": "tsx watch backend/index.ts",
     "build:backend": "tsc -p backend/tsconfig.json && tsc-alias -p backend/tsconfig.json",
