added tests for userAuth and vendingMachineDB

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,7 +14,11 @@
       "@api/*": [
         "./api/*"
       ]
-    }
+    },
+    "types": [
+      "vitest/globals",
+      "node"
+    ]
   },
   "include": [
     "**/*.ts",
