--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/backend/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "dev:frontend": "vite --config frontend/vite.config.ts",
     "dev:backend": "tsx watch backend/index.ts",
     "build:backend": "tsc -p backend/tsconfig.json && tsc-alias -p backend/tsconfig.json",
@@ -12,7 +12,8 @@
     "build": "npm run build:backend && vite build",
     "preview": "vite preview",
     "generate": "drizzle-kit generate",
-    "push": "drizzle-kit push"
+    "push": "drizzle-kit push",
+    "coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -31,12 +32,14 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/coverage-v8": "^3.1.4",
     "concurrently": "^9.1.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vitest": "^3.1.4"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
