--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "esModuleInterop": true,
       "strict": true,
       "skipLibCheck": true,
-      "baseUrl": "."
+      "baseUrl": ".",
+      "types": ["vitest"]
     },
     "include": ["frontend", "backend"]
   }
