--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,10 @@ jobs:
 
       - run: npm install
 
+      - name: Check DATABASE_URL is available
+        run: |
+          echo "DATABASE_URL starts with: ${DATABASE_URL:0:20}"
+
       - name : Run tests
         run: npm test
         env:
