--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "dist/backend/index.js",
   "type": "module",
   "scripts": {
-    "test": "vitest",
+    "test": "npm run test:backend && npm run test:frontend",
+    "test:backend": "vitest --config vitest.backend.config.ts",
+    "test:frontend": "vitest --config vitest.frontend.config.ts",
     "dev:frontend": "vite --config frontend/vite.config.ts",
     "dev:backend": "tsx watch backend/index.ts",
     "build:backend": "tsc -p backend/tsconfig.json && tsc-alias -p backend/tsconfig.json",
@@ -28,18 +30,22 @@
   "homepage": "https://github.com/jy-ham/VendHub#readme",
   "description": "",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.1.4",
     "concurrently": "^9.1.2",
+    "jsdom": "^26.1.0",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.2"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
