--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,6 +50,6 @@ jobs:
       - name: Deploy to production
         #uses: johnbeynon/render-deploy-action@v0.0.8
         #with:
-        #  service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
-        #  api-key: ${{ secrets.MY_RENDER_API_KEY }}
-        run: echo "CD test"
+        #  service-id: ${{ secrets.RENDER_SERVICE_ID }}
+        #  api-key: ${{ secrets.RENDER_API_KEY }}
+        run: echo "deploying"
