Implement cookie-based authentication
- Add axios client with cookie support
- Update UserAuthForm to use cookies instead of localStorage
- Update backend to set cookies on registration and login
- Remove JWT token storage in frontend

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,4 +1,7 @@
 {
-    "extends": "../tsconfig.json",
-    "include": ["src"]
+  "extends": "../tsconfig.json",
+  "include": ["src"],
+  "compilerOptions": {
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
   }
+}
