Added edit machine API, using the same add machine component in the details page in order to edit a vending machine.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
-  "include": ["src"],
+  "include": ["src", "src/**/*"],
   "compilerOptions": {
-    "types": ["vitest/globals", "@testing-library/jest-dom"]
-  }
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
+  },
 }
